force-app/main/default/objects/CCL_WizardStepField__mdt/CCL_WizardStepField__mdt.object-meta.xml
<CustomObject>
    <description>Field that composes the Step of a Wizard</description>
    <label>Wizard Step Field</label>
    <pluralLabel>Wizard Step Fields</pluralLabel>
</CustomObject>