force-app/main/default/objects/CCL_WizardStepField__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Name of the field</description>
    <inlineHelpText>Please put the developer name</inlineHelpText>
    <label>Field Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>