force-app/main/default/objects/CCL_WizardStepField__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>Order of the field to display on the Step</description>
    <inlineHelpText>Order of the field to display on the Step</inlineHelpText>
    <label>Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>