force-app/main/default/objects/CCL_WizardStepField__mdt/fields/Required__c.field-meta.xml
<CustomField>
    <fullName>Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is field required</description>
    <inlineHelpText>Is field required</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>