force-app/main/default/objects/CCL_WizardStepField__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Standard will let Salesforce display the field 
Any other type will display a custom renderer for the field</description>
    <inlineHelpText>Standard will let Salesforce display the field 
Any other type will display a custom renderer for the field</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Color Picker</fullName>
            </value>
            <value>
                <fullName>Section</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>