force-app/main/default/objects/CCL_WizardStepField__mdt/fields/Wizard_Step__c.field-meta.xml
<CustomField>
    <fullName>Wizard_Step__c</fullName>
    <description>Reference to the Step</description>
    <inlineHelpText>Reference to the Step</inlineHelpText>
    <label>Wizard Step</label>
    <referenceTo>CCL_WizardStep__mdt</referenceTo>
    <relationshipLabel>Wizard Step Fields</relationshipLabel>
    <relationshipName>Wizard_Step_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>